# partitioner

./: .gitignore  CMakeLists.txt  Makefile  README.md  aliases.sh  batch.sub  main.cpp  setup.sh
backup/2019-11-01/: Client.h  Getter.cpp  Server.h
src-cpp/: Client.cpp  Client.h  Getter.h  Graph.cpp  Graph.h  Server.cpp
src-py/: gen.py  main.py  parse.py  partition.py  random_graph
